# darwincore

./: .gitignore  .pre-commit-config.yaml  README.md  dwca_generator_cli.py  dwca_generator_main.py  dwca_test.py  dwca_yaml_test.py  post_final_to_yamr_prody.py  post_to_yame_prod.py  post_to_yame_test.py  publish_to_yamr.py  put_metadatafile_to_yamr.py  pyproject.toml  requirements.txt  setup.py  yaml_test_eml.py  yaml_test_indata.py
R_scripts/: iobistools_validation.r
dwca_config/: dwca_adcp_nat.yaml  dwca_bacterioplankton_nat.yaml  dwca_epibenthos_nat.yaml  dwca_epibenthos_nat_ices.yaml  dwca_epibenthos_reg_recip_proj.yaml  dwca_greyseal_nat.yaml  dwca_harbour_porpoise_nat.yaml  dwca_harbourseal_nat.yaml  dwca_historicplankton.yaml  dwca_ices_phytobenthos_nat.yaml  dwca_ices_phytoplankton_nat.yaml  dwca_ices_zoobenthos_nat.yaml  dwca_ices_zooplankton_nat.yaml  dwca_jellyfish.yaml  dwca_marinebiotoxins.yaml  dwca_microzooplankton_nat.yaml  dwca_physicalchemical_nat.yaml  dwca_phytoplankton_ifcb.yaml  dwca_phytoplankton_nat.yaml  dwca_phytoplankton_nat_ices.yaml  dwca_phytoplankton_reg_recip_proj.yaml  dwca_phytoplankton_slv_biotox.yaml  dwca_picoplankton_nat.yaml  dwca_picoplankton_nat_reg.yaml  dwca_planktonimaging_ifcb.yaml  dwca_ringedseal_nat.yaml  dwca_seal_pathology.yaml  dwca_zoobenthos_nat.yaml  dwca_zoobenthos_nat_ices.yaml  dwca_zoobenthos_reg_recip_proj.yaml  dwca_zooplankton_nat.yaml  dwca_zooplankton_nat_ices.yaml  ices_dwca_phytoplankton_nat.yaml  ices_dwca_zoobenthos_nat.yaml  ices_dwca_zooplankton_nat.yaml
dwca_generator/: __init__.py  dwca_.py  dwca_content_mapper.py  dwca_data_shark.py  dwca_data_standard.py  dwca_eml_xml.py  dwca_filters.py  dwca_format_standard.py  dwca_generator.py  dwca_generator_config.py  dwca_locations.py  dwca_meta_xml.py  (+9 more)
(+182 files in other folders)
